--- a/templates/list-read.html
+++ b/templates/list-read.html
@@ -3,22 +3,6 @@
 
 <div class="content-wrapper" style="min-height: 1302.12px;">
     <!-- Content Header (Page header) -->
-    <section class="content-header">
-      <div class="container-fluid">
-        <div class="row mb-2">
-          <div class="col-sm-6">
-            <h1>Lista de Colaboradores</h1>
-          </div>
-          <div class="col-sm-6">
-            <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active">DataTables</li>
-            </ol>
-          </div>
-        </div>
-      </div><!-- /.container-fluid -->
-    </section>
-  
     <!-- Main content -->
     <section class="content">
       <div class="container-fluid">
@@ -26,7 +10,7 @@
           <div class="col-12">
             <div class="card">
               <div class="card-header">
-                <h3 class="card-title">Projetos em andamento</h3>
+                <h3 class="card-title">Jogo Realizado</h3>
               </div>
               <!-- /.card-header -->
               <input type ="hidden" name="id_proj" value="{{proj_id}}">
@@ -65,7 +49,18 @@
               </div>
               <!-- /.card-body -->
             </div>
+        </div>
 
+        <div class="aling-div">
+	  <ul class="list-group">
+		<li class="list-group-item"><a href="/download" class="link_thumb">
+		  <table class="table table-striped">
+			  <tr>
+				  <td><i class="far fa-clipboard fa-2x"></td>
+				  <td style="text-align: right;"><strong>Deseja gerar um Excel?</i></strong> 
+			  </tr>
+            </table>
+        </a></li>
         </div>
 
               <div class="aling-back" id="back-i">
