update genertion free

--- a/templates/game-station.html
+++ b/templates/game-station.html
@@ -17,11 +17,11 @@
 			  </tr>
 		  </table>
 		</a></li>
-		<li class="list-group-item"><a href="/" class="link_thumb">
+		<li class="list-group-item"><a href="/list_gen" class="link_thumb">
 		  <table class="table table-striped">
 			  <tr>
 				  <td><i class="fas fa-cubes fa-2x"></i></td>
-				  <td style="text-align: right;"><strong>Digitar Números Manualmente</strong> 
+				  <td style="text-align: right;"><strong>Gerar Jogos Automaticamente</strong> 
 			  </tr>
 		  </table>
 	  </a></li>
