--- a/templates/list-gen.html
+++ b/templates/list-gen.html
@@ -10,50 +10,14 @@
           <div class="col-12">
             <div class="card">
               <div class="card-header">
-                <h3 class="card-title">Jogo Carregado</h3>
+                <h3 class="card-title">Defina como será gerado seus jogos</h3>
               </div>
-              <!-- /.card-header -->
-              <input type ="hidden" name="id_proj" value="{{proj_id}}">
-              <div class="card-body">
-                <div id="example2_wrapper" class="dataTables_wrapper dt-bootstrap4"><div class="row">
-                  <div class="col-sm-12 col-md-6">
-                </div><div class="col-sm-12 col-md-6"></div>
-              </div>
-              <div class="row">
-                <div class="col-sm-12">
-                <table id="example2" class="table table-bordered table-hover dataTable dtr-inline" role="grid" aria-describedby="example2_info">
-                  <thead>
-                  <tr role="row">
-                    <th class="sorting sorting_asc"></th>
-                    {% for cont in title_read %}
-                    <th class="sorting">DEZ_{{cont}}</th>
-                    {% endfor %}
-                  </tr>
-                  </thead>
-                  <tbody>
-                    {% for num in read %}
-                      <tr class="odd">
-                        <td>-</td>
-                        {% for cont in title_read %}
-                        <td>{{num[cont-1]}}</td>
-                        {% endfor %}
-                      </tr>
-                    {% endfor %}
-                </tbody>
-                </table>
-              </div>
-            </div>
-            <div class="row"><div class="col-sm-12 col-md-5">
-              <div class="dataTables_info" id="example2_info" role="status" aria-live="polite">Generated Games</div></div>
-              </ul></div>
-              </div>
-              <!-- /.card-body -->
-            </div>
+             
 
             <div class="alinha-cols">
           <div class="aling-div">
             <ul class="list-group">
-              <form action="/filltable" method="post" enctype="multipart/form-data">
+              <form action="/fillgen" method="post" enctype="multipart/form-data">
                 <label for="colunas">Quantidade de Colunas </label><br>
                 <select id="colunas" name="colunas" class="">
                   <option value="numero-coluna">-</option>
@@ -70,15 +34,15 @@
                   {% endfor %}
                 </select>
                 <br>
-                <label for="num-rep">Deseja Números não Repetidos? </label><br>
-                <select id="num-rep" name="num-rep">
-                  <option value="numero-rep-num">-</option>
+                <label for="opt-rep">Deseja Números não Repetidos? </label><br>
+                <select id="opt-rep" name="opt-rep">
+                  <option value="test-opt-rep">-</option>
                     <option value="sim">Sim</option>
                     <option value="indif">Indiferente</option>
                 </select>
             <br><br>
                 <div>
-                  <input type="submit" value="Preencher Jogos" id="alinha-button">
+                  <input type="submit" value="Gerar Jogos" id="alinha-button">
                 </div>
 
               </form>
