--- a/templates/list-gen.html
+++ b/templates/list-gen.html
@@ -34,12 +34,12 @@
                   {% endfor %}
                 </select>
                 <br>
-                <label for="opt-rep">Deseja Números não Repetidos? </label><br>
+                <!-- <label for="opt-rep">Deseja Números não Repetidos? </label><br>
                 <select id="opt-rep" name="opt-rep">
                   <option value="test-opt-rep">-</option>
                     <option value="sim">Sim</option>
                     <option value="indif">Indiferente</option>
-                </select>
+                </select> -->
             <br><br>
                 <div>
                   <input type="submit" value="Gerar Jogos" id="alinha-button">
