--- a/templates/list-doc.html
+++ b/templates/list-doc.html
@@ -64,12 +64,12 @@
                   {% endfor %}
                 </select>
                 <br>
-                <label for="opt-rep">Deseja Números não Repetidos? </label><br>
+                <!-- <label for="opt-rep">Deseja Números não Repetidos? </label><br>
                 <select id="opt-rep" name="opt-rep">
                   <option value="-">-</option>
                     <option value="sim">Sim</option>
                     <option value="indif">Indiferente</option>
-                </select>
+                </select> -->
             <br><br>
                 <div>
                   <input type="submit" value="Preencher Jogos" id="alinha-button">
