--- a/templates/list-read.html
+++ b/templates/list-read.html
@@ -26,7 +26,7 @@
                   <tr role="row">
                     <th class="sorting sorting_asc"></th>
                     {% for cont in title_read %}
-                    <th class="sorting">DEZ_{{cont}}</th>
+                    <th class="sorting">COL_{{cont}}</th>
                     {% endfor %}
                   </tr>
                   </thead>
