--- a/templates/list-doc.html
+++ b/templates/list-doc.html
@@ -26,7 +26,7 @@
                   <tr role="row">
                     <th class="sorting sorting_asc"></th>
                     {% for cont in title_read %}
-                    <th class="sorting">DEZ_{{cont}}</th>
+                    <th class="sorting">COL_{{cont}}</th>
                     {% endfor %}
                   </tr>
                   </thead>
@@ -48,6 +48,15 @@
           <div class="aling-div">
             <ul class="list-group">
               <form action="/filltable" method="post" enctype="multipart/form-data">
+
+                <label for="dezena">Quantidade de Dezenas </label><br>
+                <select id="dezena" name="dezena" class="">
+                  <option value="numero-dezena">-</option>
+                  {% for read in list_cont %}
+                    <option value="{{read}}">{{read}}</option>
+                  {% endfor %}
+                </select>
+                <br>
                 
                 <select id="hideen-num" name="hideen-num" class="div-hiddem"> 
                   <option value="{{qt_lin}}">-</option>
