--- a/templates/list-gen.html
+++ b/templates/list-gen.html
@@ -14,18 +14,28 @@
               </div>
              
 
-            <div class="alinha-cols">
+        <div class="alinha-cols">
           <div class="aling-div">
             <ul class="list-group">
               <form action="/fillgen" method="post" enctype="multipart/form-data">
-                <label for="colunas">Quantidade de Colunas </label><br>
+                <!-- <label for="dezena">Quantidade de Dezenas </label><br>
+                <select id="dezena" name="dezena" class="">
+                  <option value="numero-dezena">-</option>
+                  {% for read in list_cont %}
+                    <option value="{{read}}">{{read}}</option>
+                  {% endfor %}
+                </select> -->
+                <label for="lname">Escolha suas Dezenas</label>
+                <input type="text" id="number-dez" name="number-dez" placeholder="ex: 10;20;30">
+                <br>
+                <!-- <label for="colunas">Quantidade de Colunas </label><br>
                 <select id="colunas" name="colunas" class="">
                   <option value="numero-coluna">-</option>
                   {% for read in list_cont %}
                     <option value="{{read}}">{{read}}</option>
                   {% endfor %}
                 </select>
-                <br>
+                <br> -->
                 <label for="linha">Quantidade de Linhas </label><br>
                 <select id="linha" name="linha">
                   <option value="numero-linha">-</option>
@@ -33,14 +43,15 @@
                     <option value="{{read}}">{{read}}</option>
                   {% endfor %}
                 </select>
-                <br>
+                <br><br>
+                <p>Atenção! A quantidade de colunas não pode ultrapassar a quantidade de Dezena</p>
                 <!-- <label for="opt-rep">Deseja Números não Repetidos? </label><br>
                 <select id="opt-rep" name="opt-rep">
                   <option value="test-opt-rep">-</option>
                     <option value="sim">Sim</option>
                     <option value="indif">Indiferente</option>
                 </select> -->
-            <br><br>
+            <br>
                 <div>
                   <input type="submit" value="Gerar Jogos" id="alinha-button">
                 </div>
