--- a/templates/list-read-num-col.html
+++ b/templates/list-read-num-col.html
@@ -35,7 +35,7 @@
                       <tr class="odd">
                         <td>-</td>
                         {% for cont in title_read %}
-                        <td>{{num[cont-1]}}</td>
+                        <td>{{num[cont]}}</td>
                         {% endfor %}
                       </tr>
                     {% endfor %}
@@ -55,24 +55,11 @@
           <div class="aling-div">
             <ul class="list-group">
               <form action="/fillgen_num" method="post" enctype="multipart/form-data">
-                <!-- <label for="dezena">Quantidade de Dezenas </label><br>
-                <select id="dezena" name="dezena" class="">
-                  <option value="numero-dezena">-</option>
-                  {% for read in list_cont %}
-                    <option value="{{read}}">{{read}}</option>
-                  {% endfor %}
-                </select> -->
-                <label for="lname">Escolha suas Dezenas</label>
+                <label for="lname">Para uma nova coluna, escolha suas Dezenas</label>
                 <input type="text" id="number-dez" name="number-dez" placeholder="ex: 10;20;30">
                 <br>
                 <br>
                 <p>Atenção! A quantidade de colunas não pode ultrapassar a quantidade de Dezena</p>
-                <!-- <label for="opt-rep">Deseja Números não Repetidos? </label><br>
-                <select id="opt-rep" name="opt-rep">
-                  <option value="test-opt-rep">-</option>
-                    <option value="sim">Sim</option>
-                    <option value="indif">Indiferente</option>
-                </select> -->
             <br>
                 <div>
                   <input type="submit" value="Gerar Jogos" id="alinha-button">
@@ -82,10 +69,6 @@
             <ul>
           </div>
         </div>
-
-        </div>
-
-        
 
     <div class="aling-div">
 	  <ul class="list-group">
