--- a/templates/list-gen.html
+++ b/templates/list-gen.html
@@ -13,15 +13,40 @@
                 <h3 class="card-title">Defina como será gerado seus jogos</h3>
               </div>
              
-
         <div class="alinha-cols">
           <div class="aling-div">
             <ul class="list-group">
               <form action="/fillgen" method="post" enctype="multipart/form-data">
-                <label for="lname">Escolha suas Dezenas</label>
-                <input type="text" id="number-dez" name="number-dez" placeholder="ex: 10;20;30">
-                <br>
-                <label for="linha">Quantidade de Linhas </label><br>
+                <label for="lname"><strong>Escolha suas Dezenas</strong></label>
+                <label for="lname" class="alin1"> Escolher Todas as Dezenas</label>
+                <input class="alin2" type="checkbox" name="All" value="All">
+                <!-- <input type="text" id="number-dez" name="number-dez" placeholder="ex: 10;20;30">
+                <br> -->
+<div>
+    <div class="row">
+      <div class="col-sm-12">
+      <table id="example2" class="table table-bordered table-hover dataTable dtr-inline" role="grid" aria-describedby="example2_info">
+       
+      <tbody>
+        {% for cont in table_listnum %}
+          <tr>
+            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.0}}" value="{{cont.0}}"> {{cont.0}}</td>
+            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.1}}" value="{{cont.1}}"> {{cont.1}}</td>
+            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.2}}" value="{{cont.2}}"> {{cont.2}}</td>
+            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.3}}" value="{{cont.3}}"> {{cont.3}}</td>
+            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.4}}" value="{{cont.4}}"> {{cont.4}}</td>
+            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.5}}" value="{{cont.5}}"> {{cont.5}}</td>
+            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.6}}" value="{{cont.6}}"> {{cont.6}}</td>
+            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.7}}" value="{{cont.7}}"> {{cont.7}}</td>
+            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.8}}" value="{{cont.8}}"> {{cont.8}}</td>
+            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.9}}" value="{{cont.9}}"> {{cont.9}}</td>
+          </tr>
+        {% endfor %}
+    </tbody>
+    </table>
+  </div>
+</div>
+                <label for="linha"><strong>Escolha a Quantidade de Linhas </strong></label><br>
                 <select id="linha" name="linha">
                   <option value="numero-linha">-</option>
                   {% for read in list_cont %}
