--- a/templates/list-read-num-col.html
+++ b/templates/list-read-num-col.html
@@ -26,7 +26,7 @@
                   <tr role="row">
                     <th class="sorting sorting_asc"></th>
                     {% for cont in title_read %}
-                    <th class="sorting">COL_{{cont}}</th>
+                    <th class="sorting">COL_{{cont + 1}}</th>
                     {% endfor %}
                   </tr>
                   </thead>
@@ -55,12 +55,35 @@
           <div class="aling-div">
             <ul class="list-group">
               <form action="/fillgen_num" method="post" enctype="multipart/form-data">
-                <label for="lname">Para uma nova coluna, escolha suas Dezenas</label>
-                <input type="text" id="number-dez" name="number-dez" placeholder="ex: 10;20;30">
-                <br>
-                <br>
-                <p>Atenção! A quantidade de colunas não pode ultrapassar a quantidade de Dezena</p>
-            <br>
+                <label for="lname"><strong>Escolha suas Dezenas</strong></label>
+                <label for="lname" class="alin1"> Escolher Todas as Dezenas</label>
+                <input class="alin2" type="checkbox" name="All" value="All">
+<div>
+    <div class="row">
+      <div class="col-sm-12">
+      <table id="example2" class="table table-bordered table-hover dataTable dtr-inline" role="grid" aria-describedby="example2_info">
+       
+      <tbody>
+        {% for cont in table_listnum %}
+          <tr>
+            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.0}}" value="{{cont.0}}"> {{cont.0}}</td>
+            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.1}}" value="{{cont.1}}"> {{cont.1}}</td>
+            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.2}}" value="{{cont.2}}"> {{cont.2}}</td>
+            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.3}}" value="{{cont.3}}"> {{cont.3}}</td>
+            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.4}}" value="{{cont.4}}"> {{cont.4}}</td>
+            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.5}}" value="{{cont.5}}"> {{cont.5}}</td>
+            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.6}}" value="{{cont.6}}"> {{cont.6}}</td>
+            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.7}}" value="{{cont.7}}"> {{cont.7}}</td>
+            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.8}}" value="{{cont.8}}"> {{cont.8}}</td>
+            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.9}}" value="{{cont.9}}"> {{cont.9}}</td>
+          </tr>
+        {% endfor %}
+    </tbody>
+    </table>
+  </div>
+</div>
+
+<br>
                 <div>
                   <input type="submit" value="Gerar Jogos" id="alinha-button">
                 </div>
@@ -101,3 +124,6 @@
 
 
 {% endblock content %}
+
+
+1;2;3;4;5;6;7;8;9;10;11;12;13;14;15;16;17;18;19;20;21;22;23;24;25;26;27;28;29;30;31;32;33;34;35;36;37;38;39;40;41;42;43;44;45;46;47;48;49;50;51;52;53;54;55;56;57;58;59;60
