--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,12 +8,13 @@ a{
     right: 40px;
     padding-left: 20px;
 }
-.alin2{
+.form-group{
     float: right;
     position: relative;
     top: 5px;
-    right: 40px;
+    right: 200px;
     padding-left: 20px;
+    padding-bottom: 100px;
 }
 
 .td-alin{
