--- a/templates/list-gen.html
+++ b/templates/list-gen.html
@@ -18,10 +18,14 @@
             <ul class="list-group">
               <form action="/fillgen" method="post" enctype="multipart/form-data">
                 <label for="lname"><strong>Escolha suas Dezenas</strong></label>
-                <label for="lname" class="alin1"> Escolher Todas as Dezenas</label>
-                <input class="alin2" type="checkbox" name="All" value="All">
-                <!-- <input type="text" id="number-dez" name="number-dez" placeholder="ex: 10;20;30">
-                <br> -->
+                <div class="form-group">
+                  <div class="custom-control custom-switch">
+                  <input type="checkbox" class="custom-control-input" id="customSwitch1" name="all">
+                  <label class="custom-control-label" for="customSwitch1">Todas Dezanas?</label>
+                  </div>
+                </div>
+<br><br>
+
 <div>
     <div class="row">
       <div class="col-sm-12">
@@ -59,7 +63,6 @@
                 <div>
                   <input type="submit" value="Gerar Jogos" id="alinha-button">
                 </div>
-
               </form>
             <ul>
           </div>
@@ -81,8 +84,6 @@
     </section>
     <!-- /.content -->
   </div>
-
-
 
 
 {% endblock content %}
