--- a/templates/game-station.html
+++ b/templates/game-station.html
@@ -21,7 +21,7 @@
 		  <table class="table table-striped">
 			  <tr>
 				  <td><i class="fas fa-cubes fa-2x"></i></td>
-				  <td style="text-align: right;"><strong>Gerar Jogos Automaticamente</strong> 
+				  <td style="text-align: right;"><strong>Gerar Jogos Personalizados</strong> 
 			  </tr>
 		  </table>
 	  </a></li>
