--- a/templates/list-gen.html
+++ b/templates/list-gen.html
@@ -20,17 +20,25 @@
                 <label for="lname"><strong>Escolha suas Dezenas</strong></label>
                 <div class="form-group">
                   <div class="custom-control custom-switch">
-                  <input type="checkbox" class="custom-control-input" id="customSwitch1" name="all">
-                  <label class="custom-control-label" for="customSwitch1">Todas Dezanas?</label>
+                    <input type="checkbox" class="custom-control-input" id="customSwitch1" name="all">
+                    <label class="custom-control-label" for="customSwitch1">Todas Dezanas</label>
+                  </div>
+                  <div class="custom-control custom-switch">
+                    <input type="checkbox" class="custom-control-input" id="customSwitch2" name="mega">
+                    <label class="custom-control-label" for="customSwitch2">MegaSena</label>
+                  </div>
+                  <div class="custom-control custom-switch">
+                    <input type="checkbox" class="custom-control-input" id="customSwitch3" name="loto">
+                    <label class="custom-control-label" for="customSwitch3">LotoFácil</label>
                   </div>
                 </div>
+              </div>
 <br><br>
 
 <div>
     <div class="row">
       <div class="col-sm-12">
       <table id="example2" class="table table-bordered table-hover dataTable dtr-inline" role="grid" aria-describedby="example2_info">
-       
       <tbody>
         {% for cont in table_listnum %}
           <tr>
@@ -58,8 +66,6 @@
                   {% endfor %}
                 </select>
                 <br><br>
-                <p>Atenção! A quantidade de colunas não pode ultrapassar a quantidade de Dezena</p>
-            <br>
                 <div>
                   <input type="submit" value="Gerar Jogos" id="alinha-button">
                 </div>
@@ -85,6 +91,7 @@
     <!-- /.content -->
   </div>
 
+</div>
 
 {% endblock content %}
 
