--- a/templates/list-read-num-col.html
+++ b/templates/list-read-num-col.html
@@ -58,10 +58,19 @@
                 <label for="lname"><strong>Escolha suas Dezenas</strong></label>
                 <div class="form-group">
                   <div class="custom-control custom-switch">
-                  <input type="checkbox" class="custom-control-input" id="customSwitch1" name="all">
-                  <label class="custom-control-label" for="customSwitch1">Todas Dezanas?</label>
+                    <input type="checkbox" class="custom-control-input" id="customSwitch1" name="all">
+                    <label class="custom-control-label" for="customSwitch1">Todas Dezanas</label>
+                  </div>
+                  <div class="custom-control custom-switch">
+                    <input type="checkbox" class="custom-control-input" id="customSwitch2" name="mega">
+                    <label class="custom-control-label" for="customSwitch2">MegaSena</label>
+                  </div>
+                  <div class="custom-control custom-switch">
+                    <input type="checkbox" class="custom-control-input" id="customSwitch3" name="loto">
+                    <label class="custom-control-label" for="customSwitch3">LotoFácil</label>
                   </div>
                 </div>
+              </div>
 <div>
     <div class="row">
       <div class="col-sm-12">
@@ -87,7 +96,7 @@
   </div>
 </div>
 
-<br>
+<br><br>
                 <div>
                   <input type="submit" value="Gerar Jogos" id="alinha-button">
                 </div>
@@ -124,10 +133,4 @@
     <!-- /.content -->
   </div>
 
-
-
-
 {% endblock content %}
-
-
-1;2;3;4;5;6;7;8;9;10;11;12;13;14;15;16;17;18;19;20;21;22;23;24;25;26;27;28;29;30;31;32;33;34;35;36;37;38;39;40;41;42;43;44;45;46;47;48;49;50;51;52;53;54;55;56;57;58;59;60
