--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -12,9 +12,8 @@ a{
     float: right;
     position: relative;
     top: 5px;
-    right: 200px;
+    right: 50px;
     padding-left: 20px;
-    padding-bottom: 100px;
 }
 
 .td-alin{
@@ -37,7 +36,7 @@ a{
 
 .content-box{
     padding-left: 30%;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
 }
 
 .alinha-cols{
@@ -47,6 +46,7 @@ a{
 
 .aling-div{
     padding-top: 20px;
+    width: 100%;
 }
 
 .aling-back{
@@ -140,14 +140,13 @@ footer {
     background-color: #333;
     height: 175px;
     width: 100%;
-    /* border-top: 0px solid #202020; */
 
 }
 
 footer p {
     color: #f5f5f5;
     text-align: center;
-    top: 50%;
+    top: 45%;
     position: relative;
 }
 
