--- a/templates/fileform.html
+++ b/templates/fileform.html
@@ -7,13 +7,13 @@
     <div class="content-box">
     <h3>Importar Planilhas de Jogos</h3>
 
-    <div class="aling-div">
+    <div class="aling-div-base">
             <ul class="list-group">
                 <li class="list-group-item">
                     <h5>Escolha a planilha a ser importada</h5>
                     <br>
                     <form action="/handleUpload" method="post" enctype="multipart/form-data">
-                        <div class="form-group">
+                        <div class="form-chose">
                             <input type="file" id="file-ajust" name="photo"/> <!--multiple="multiple"-->
                             <input type="submit" class="btn btn-secondary" value="Enviar" id="send-ajust"/>
                         </div>
@@ -23,8 +23,8 @@
     </div>
 
     <div class="aling-back">
-            <a href="/"><i class="fas fa-angle-double-left fa-2x"></i></a>
-      </div>
+        <a href="/"><i class="fas fa-angle-double-left fa-2x"></i></a>
+    </div>
       
 </div>
 
