--- a/templates/game-station.html
+++ b/templates/game-station.html
@@ -1,40 +1,56 @@
 {% extends "layout.html" %}
 {% block content %}
 
+<div class="content-wrapper" style="min-height: 1302.12px;">
+    <!-- Content Header (Page header) -->
+    <!-- Main content -->
+    <section class="content">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12">
+            <div class="card">
+              <div class="card-header">
+                <h3 class="card-title">Gerar Jogos</h3>
+              </div>
 
-<div class="row">
-	<div class="content-box">
-	  <h3>Rodar Jogos</h3>
-	  <p>O que deseja fazer?</p>
-	  
-	<div class="aling-div">
-	  <ul class="list-group">
-		<li class="list-group-item"><a href="/fileform" class="link_thumb">
-		  <table class="table table-striped">
-			  <tr>
-				  <td><i class="fas fa-cloud-upload-alt fa-2x"></i></td>
-				  <td style="text-align: right;"><strong>Carregar Planilha</strong></td>
-			  </tr>
-		  </table>
-		</a></li>
-		<li class="list-group-item"><a href="/list_gen" class="link_thumb">
-		  <table class="table table-striped">
-			  <tr>
-				  <td><i class="fas fa-cubes fa-2x"></i></td>
-				  <td style="text-align: right;"><strong>Gerar Jogos Personalizados</strong> 
-			  </tr>
-		  </table>
-	  </a></li>
-	  
-	</div>
+            
+			  <div class="aling-div">
+				<ul class="list-group">
+				  <li class="list-group-item"><a href="/fileform" class="link_thumb">
+					<table class="table table-striped">
+						<tr>
+							<td><i class="fas fa-folder-plus fa-2x"></i></td>
+							<td style="text-align: right;"><strong>Deseja carregar um Jogo?</i></strong> 
+						</tr>
+					  </table>
+				  </a></li>
+				  </ul>
+				  </div>
+
+		
+				  <div class="aling-div">
+					<ul class="list-group">
+					  <li class="list-group-item"><a href="/list_gen" class="link_thumb">
+						<table class="table table-striped">
+							<tr>
+								<td><i class="far fa-clipboard fa-2x"></td>
+								<td style="text-align: right;"><strong>Deseja gerar jogos manualmente?</i></strong> 
+							</tr>
+						  </table>
+					  </a></li>
+					  </ul>
+					  </div>
   
 	<div class="aling-back">
 		  <a href="/"><i class="fas fa-angle-double-left fa-2x"></i></a>
 	</div>
-  
+  <br>
  </div>
  
 </div>
+
+
+
 
   
 {% endblock content %}
