--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -24,17 +24,26 @@ a{
     right: 40px;
     padding-left: 20px;
 }
+
+.col-sm-6{
+    padding-left: 20px;
+}
+
 .form-group{
     float: right;
     position: relative;
     top: 5px;
-    right: 50px;
-    padding-left: 20px;
+    left: -500px;
+}
+
+.aling-back{
+    float: right;
+    padding-top: 20px;
 }
 
 .td-alin{
-    align-items: center;
     text-align: center;
+    height: 1px;
 }
 
 .div-hiddem{
@@ -53,10 +62,6 @@ a{
 .alinha-cols{
     padding-left: 30px;
     padding-bottom: 30px;
-}
-
-.aling-back{
-    padding-top: 20px;
 }
 
 /* Navbar */
