--- a/templates/game-station.html
+++ b/templates/game-station.html
@@ -16,7 +16,7 @@
             
 			  <div class="aling-div">
 				<ul class="list-group">
-				  <li class="list-group-item"><a href="/fileform" class="link_thumb">
+				  <li class="list-group-item"><a href="/construction" class="link_thumb">
 					<table class="table table-striped">
 						<tr>
 							<td><i class="fas fa-folder-plus fa-2x"></i></td>
