--- a/templates/layout.html
+++ b/templates/layout.html
@@ -37,19 +37,19 @@
                         <a class="nav-link" href="/game_station">Criar Jogos</a>
                     </li>
                     <li class="nav-item">
-                            <a class="nav-link" href="#">Usuários</a>
+                            <a class="nav-link" href="/construction">Usuários</a>
                         </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Entrar</a>
+                        <a class="nav-link" href="/construction">Entrar</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sobre nós</a>
+                        <a class="nav-link" href="/construction">Sobre nós</a>
                     </li>
 
                     <li class="nav-item">
-                            <a class="nav-link" href="#">Sair</a>
+                            <a class="nav-link" href="/construction">Sair</a>
                         </li>
 
                 </ul>
