--- a/templates/list-gen.html
+++ b/templates/list-gen.html
@@ -22,7 +22,7 @@
                     <div>
                       <div class="row">
                         <div class="col-sm-6">
-                          <table id="example1" class="table table-bordered table-hover dataTable dtr-inline" role="grid"
+                          <table id="example1" class="table table-bordered" role="grid"
                             aria-describedby="example2_info">
                             <tbody>
                               {% for cont in table_listnum %}
