--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,6 +2,11 @@ a{
     text-decoration: none;
 }
 
+#customCheckbox1{
+width: 30px;
+height: 30px;
+}
+
 .content-box{
     padding-left: 30%;
     padding-bottom: 10px;
