--- a/templates/list-gen.html
+++ b/templates/list-gen.html
@@ -70,12 +70,13 @@
                       </div>
                     </div>
                     <label for="linha"><strong>Escolha a Quantidade de Linhas </strong></label><br>
-                    <select id="linha" name="linha">
+                    <input type="text" name="numero-linha">
+                    <!-- <select id="linha" name="linha">
                       <option value="numero-linha">-</option>
                       {% for read in list_cont %}
                       <option value="{{read}}">{{read}}</option>
                       {% endfor %}
-                    </select>
+                    </select> -->
                     <br><br>
                     <div>
                       <input type="submit" value="Gerar Jogos" id="alinha-button">
