--- a/templates/game-station.html
+++ b/templates/game-station.html
@@ -47,17 +47,13 @@
 						  <li class="list-group-item"><a href="/list_gen_change" class="link_thumb">
 							<table class="table table-striped">
 								<tr>
-									<td><i class="far fa-clipboard fa-2x"></td>
+									<td><i class="fas fa-star fa-2x"></td>
 									<td style="text-align: right;"><strong>Deseja gerar jogos ajustáveis?</i></strong> 
 								</tr>
 							  </table>
 						  </a></li>
 						  </ul>
 						  </div>
-
-					  
-
-
   
 	<div class="aling-back">
 		  <a href="/"><i class="fas fa-angle-double-left fa-2x"></i></a>
