--- a/templates/list-read-change-dez.html
+++ b/templates/list-read-change-dez.html
@@ -71,7 +71,7 @@
                         <label class="custom-control-label" for="customSwitch1">Todas Dezanas</label>
                       </div>
                       <div class="custom-control custom-switch">
-                        <input type="checkbox" class="custom-control-input" id="customSwitch2" name="mega">
+                        <input type="checkbox" class="custom-control-input" id="customSwitch2" name="mega" checked>
                         <label class="custom-control-label" for="customSwitch2">MegaSena</label>
                       </div>
                       <div class="custom-control custom-switch">
