--- a/templates/list-gen.html
+++ b/templates/list-gen.html
@@ -27,26 +27,16 @@
                             <tbody>
                               {% for cont in table_listnum %}
                               <tr>
-                                <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.0}}"
-                                    value="{{cont.0}}"> {{cont.0}}</td>
-                                <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.1}}"
-                                    value="{{cont.1}}"> {{cont.1}}</td>
-                                <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.2}}"
-                                    value="{{cont.2}}"> {{cont.2}}</td>
-                                <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.3}}"
-                                    value="{{cont.3}}"> {{cont.3}}</td>
-                                <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.4}}"
-                                    value="{{cont.4}}"> {{cont.4}}</td>
-                                <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.5}}"
-                                    value="{{cont.5}}"> {{cont.5}}</td>
-                                <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.6}}"
-                                    value="{{cont.6}}"> {{cont.6}}</td>
-                                <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.7}}"
-                                    value="{{cont.7}}"> {{cont.7}}</td>
-                                <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.8}}"
-                                    value="{{cont.8}}"> {{cont.8}}</td>
-                                <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.9}}"
-                                    value="{{cont.9}}"> {{cont.9}}</td>
+                                <td class="td-alin"><input type="checkbox" name="{{cont.0}}" value="{{cont.0}}"> {{cont.0}}</td>
+                                <td class="td-alin"><input type="checkbox" name="{{cont.1}}" value="{{cont.1}}"> {{cont.1}}</td>
+                                <td class="td-alin"><input type="checkbox" name="{{cont.2}}" value="{{cont.2}}"> {{cont.2}}</td>
+                                <td class="td-alin"><input type="checkbox" name="{{cont.3}}" value="{{cont.3}}"> {{cont.3}}</td>
+                                <td class="td-alin"><input type="checkbox" name="{{cont.4}}" value="{{cont.4}}"> {{cont.4}}</td>
+                                <td class="td-alin"><input type="checkbox" name="{{cont.5}}" value="{{cont.5}}"> {{cont.5}}</td>
+                                <td class="td-alin"><input type="checkbox" name="{{cont.6}}" value="{{cont.6}}"> {{cont.6}}</td>
+                                <td class="td-alin"><input type="checkbox" name="{{cont.7}}" value="{{cont.7}}"> {{cont.7}}</td>
+                                <td class="td-alin"><input type="checkbox" name="{{cont.8}}" value="{{cont.8}}"> {{cont.8}}</td>
+                                <td class="td-alin"><input type="checkbox" name="{{cont.9}}" value="{{cont.9}}"> {{cont.9}}</td>
                               </tr>
                               {% endfor %}
                             </tbody>
