--- a/templates/list-read-num.html
+++ b/templates/list-read-num.html
@@ -13,13 +13,13 @@
                 <h3 class="card-title">Jogo Realizado</h3>
               </div>
               <!-- /.card-header -->
-              <input type ="hidden" name="id_proj" value="{{proj_id}}">
+              <input type="hidden" name="id_proj" value="{{proj_id}}">
               <div class="card-body">
                 <div id="example2_wrapper" class="dataTables_wrapper dt-bootstrap4"><div class="row">
                   <div class="col-sm-12 col-md-6">
                 </div><div class="col-sm-12 col-md-6"></div>
               </div>
-              <div class="row">
+              <div id="example1_wrapper" class="row">
                 <div class="col-sm-12">
                 <table id="example2" class="table table-bordered table-hover dataTable dtr-inline" role="grid" aria-describedby="example2_info">
                   <thead>
