--- a/templates/list-gen-change.html
+++ b/templates/list-gen-change.html
@@ -17,7 +17,7 @@
               <div class="aling-div">
                 <ul class="list-group">
                   <form action="/fillgen_change" method="post" enctype="multipart/form-data">
-                    <label for="lname"><strong>Escolha suas Dezenas</strong></label>
+                    <label for="lname"><strong>Dezenas Principais</strong></label>
 
                     <div>
                       <div class="row">
@@ -58,10 +58,10 @@
                         </div>
                       </div>
                     </div>
-                    <label for="linha"><strong>Escolha a Quantidade de Linhas </strong></label><br>
+                    <label for="linha"><strong>Quantidade de Linhas </strong></label><br>
                     <input type="text" name="numero-linha">
                     <br><br>
-                    <label for="dez2"><strong>Escolhas suas dezenas extras </strong></label><br>
+                    <label for="dez2"><strong>Dezenas Extras </strong></label><br>
                     <input type="text" name="dez2">
                     <br><br>
                     <div>
