--- a/templates/list-gen.html
+++ b/templates/list-gen.html
@@ -58,7 +58,7 @@
                         </div>
                       </div>
                     </div>
-                    <label for="linha"><strong>Escolha a Quantidade de Linhas </strong></label><br>
+                    <label for="linha"><strong>Quantidade de Linhas </strong></label><br>
                     <input type="text" name="numero-linha">
                     <br><br>
                     <div>
