--- a/templates/list-read-change-dez.html
+++ b/templates/list-read-change-dez.html
@@ -61,7 +61,7 @@
               <ul class="list-group">
                 <form action="/fillgen_change_num" method="post" enctype="multipart/form-data">
       
-                    <label for="dez1"><strong>Escolha suas Dezenas </strong></label><br>
+                    <label for="dez1"><strong>Dezenas Principais</strong></label><br>
                     <input type="text" name="dez1" value="{{dez1_read}}">
                     <br><br>
 
@@ -80,10 +80,10 @@
                       </div>
                     </div>
 
-                    <label for="coluna"><strong>Escolha a Quantidade de Colunas </strong></label><br>
+                    <label for="coluna"><strong>Quantidade de Colunas </strong></label><br>
                     <input type="text" name="coluna" value="{{qt_col}}">
                     <br><br>
-                    <label for="dez2"><strong>Escolhas suas dezenas extras </strong></label><br>
+                    <label for="dez2"><strong>Dezenas Extras </strong></label><br>
                     <input type="text" name="dez2" value="{{dez2_read}}">
                     <br><br>
                     <label for="coluna-del"><strong>Deletar Colunas </strong></label><br>
