--- a/templates/list-read-num-col.html
+++ b/templates/list-read-num-col.html
@@ -85,7 +85,6 @@
         </div>
      </section>
                
-     
      <div id="exemplo1" class="container-fluid">
                   <div class="row" >
                     <div class="col-12">
@@ -104,7 +103,7 @@
                       </div>
                     </div>
  
-                    <label for="coluna"><strong>Escolha a Quantidade de Colunas </strong></label><br>
+                    <label for="coluna"><strong>Quantidade de Colunas </strong></label><br>
                     <input type="text" name="coluna" value="{{qt_col}}">
                     <br><br>
                     <label for="coluna-del"><strong>Deletar Colunas </strong></label><br>
