--- a/templates/game-station.html
+++ b/templates/game-station.html
@@ -20,7 +20,7 @@
 					<table class="table table-striped">
 						<tr>
 							<td><i class="fas fa-folder-plus fa-2x"></i></td>
-							<td style="text-align: right;"><strong>Deseja carregar um Jogo?</i></strong> 
+							<td style="text-align: right;"><strong>Carregar um Jogo?</i></strong> 
 						</tr>
 					  </table>
 				  </a></li>
@@ -34,7 +34,7 @@
 						<table class="table table-striped">
 							<tr>
 								<td><i class="far fa-clipboard fa-2x"></td>
-								<td style="text-align: right;"><strong>Deseja gerar jogos manualmente?</i></strong> 
+								<td style="text-align: right;"><strong>Gerar jogos manualmente</i></strong> 
 							</tr>
 						  </table>
 					  </a></li>
@@ -48,12 +48,25 @@
 							<table class="table table-striped">
 								<tr>
 									<td><i class="fas fa-star fa-2x"></td>
-									<td style="text-align: right;"><strong>Deseja gerar jogos ajustáveis?</i></strong> 
+									<td style="text-align: right;"><strong>Gerar jogos automáticos_1</i></strong> 
 								</tr>
 							  </table>
 						  </a></li>
 						  </ul>
 						  </div>
+
+						  <div class="aling-div">
+							<ul class="list-group">
+							  <li class="list-group-item"><a href="/list_gen_change" class="link_thumb">
+								<table class="table table-striped">
+									<tr>
+										<td><i class="fas fa-star fa-2x"></td>
+										<td style="text-align: right;"><strong>Gerar jogos automáticos_2</i></strong> 
+									</tr>
+								  </table>
+							  </a></li>
+							  </ul>
+							  </div>
   
 	<div class="aling-back">
 		  <a href="/"><i class="fas fa-angle-double-left fa-2x"></i></a>
